--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -1,4 +1,14 @@
 .gitAcc{
     color: orange;
     font-weight: 500;
+    // display: flex;
+    // flex-direction: row;
+    // justify-content: center;
+    // align-items: center;
+}
+
+#footer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
